fix cut off text in select

--- a/sites/all/themes/pul_base/css/pul-base.styles.css
+++ b/sites/all/themes/pul_base/css/pul-base.styles.css
@@ -257,7 +257,6 @@ select {
   outline: none;
   background: #f5f4f1;
   border: 1px solid #f5f4f1;
-  padding: 5px;
   height: 1.8em;
 }
 
